Updated to IntelliJ 2019.3.1

--- a/src/main/resources/inspectionDescriptions/PubPackages.html
+++ b/src/main/resources/inspectionDescriptions/PubPackages.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 This inspection checks packages versions in pubspec.yaml file. It finds the latest version for the package and compares
-it with current. If they're different, it highlights an error.
+it with current. If they're different, it highlights a warring.
 </body>
 </html>
